-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.2, 6.2.6, 6.5.0 RC, 6.6
-
-
a815c40e7 (dev), 74ee445a6 (tqtc/lts-6.2), cfb1b9661 (6.5), 45b996de8 (tqtc/lts-5.15)
Hello,
Issue: QMainWindow with QListWidget that has implemented drag & drop support using InternalMove. QListWidgetItem has set custom QWidget.
The issue is that on drop event (with is Qt::TargetMoveAction) item is re-created (item is deleted and new one is added) and that behaviour is not consistent. For example sometimes it happens when dropping between other items, but usually (reproducible 100%) happens when dropping on bottom of QListWIdget window where there is no items.
Expected behaviour is that item changes it's order on the list.
Issue noticed on Windows with Qt 5.15.2, using 5.14.2 can't reproduce issue.
- resulted from
-
QTBUG-87057 QListView item looses items from models that don't override moveRows during internal drag'n'drop
-
- Closed
-
| For Gerrit Dashboard: QTBUG-100128 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 469040,8 | QListView: No-op, when a list item is dropped directly behind itself | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 470155,2 | QListView: No-op, when a list item is dropped directly behind itself | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 470156,2 | QListView: No-op, when a list item is dropped directly behind itself | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 470247,4 | QListView: No-op, when a list item is dropped directly behind itself | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |